[package]
name = "run_command"
version = "0.0.2"
edition = "2021"
authors = ["MoghTech"]
description = "standardized way to run shell commands with a compact api."
license = "MIT"
exclude = ["package.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features=["full"], optional = true }

[features]
async_tokio = ["dep:tokio"]