[package]
name = "run_command"
version = "0.0.6"
edition = "2021"
authors = ["MoghTech"]
description = "standardized way to run shell commands with a compact api."
repository = "https://github.com/mbecker20/run_command"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features=["full"], optional = true }

[features]
async_tokio = ["dep:tokio"]